dev/test_programs/INVALID/group5/scanner_literal_hex_wrong_character.go
package scanner_literal_int_leading_0

// G is not hex

var a int = 0x0123456789ABCDEFG
